fixed gaphic page

--- a/css/index.css
+++ b/css/index.css
@@ -80,6 +80,12 @@ a {
 	
 }
 
+.graphic-square {
+	height:500px;
+	margin-top:180px !important;
+}
+
+
 .project-image {
 	width: 100%;
 	height: 100%;
@@ -142,6 +148,13 @@ a {
 
 
 }*/
+
+.project-square:hover .graphic-overlay {
+	background-color: rgba(255,255,255, .18);
+	-webkit-transition: background-color 300ms; 
+    transition: background-color 300ms;
+    transition-timing-function: ease-out;
+}
 
 .project-square:hover .overlay {
 	background-color: rgba(255,255,255, .18);
@@ -223,6 +236,14 @@ a {
 	position: relative;
 }
 
+.graphic-overlay {
+	z-index: 2;
+	width:100%;
+	background-color: rgba(0,0,0, .6);
+	height:160px;
+	position: relative;
+	transform: translate3d(0px,-160px,0);
+}
 
 .content-block {
 
@@ -230,6 +251,10 @@ a {
 	padding-bottom: 300px;
 	padding-left: 48px;
 	padding-right: 30px;
+}
+
+.graphic-page-margin {
+	margin-top: 160px !important;
 }
 
 @media only screen and (max-width: 920px) {
@@ -244,6 +269,12 @@ a {
 
 
 @media only screen and (max-width: 800px) { 
+
+	.graphic-overlay {
+
+	 height: 130px;
+	 transform: translate3d(0px,-130px,0);
+	}
 
 	.shift {
 		margin: 0 auto;
@@ -280,13 +311,19 @@ a {
 		box-shadow: initial;
 	    height: 100%;
 	    vertical-align: top;
-	    background-size: 100%;
+	    background-size: cover;
 	    background-repeat: no-repeat;
 	   	background-position: initial;
 		-webkit-transition: all 300ms cubic-bezier(0.01, 0.98, 0.9, 1.01); /* For Safari 3.1 to 6.0 */
 	    transition: all 300ms cubic-bezier(0.01, 0.98, 0.9, 1.01);
 
 		
+	}
+
+	.graphic-square {
+		height:500px !important;
+		background-position: bottom;
+		margin-top:150px !important;
 	}
 
 }
